WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50002
DRT should not generate pixel output for text/plain tests
https://bugs.webkit.org/show_bug.cgi?id=50002
Summary
DRT should not generate pixel output for text/plain tests
Mihai Parparita
Reported
2010-11-23 20:52:30 PST
DRT should not generate pixel output for text/plain tests
Attachments
Patch
(4.40 KB, patch)
2010-11-23 20:55 PST
,
Mihai Parparita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2010-11-23 20:55:25 PST
Created
attachment 74721
[details]
Patch
David Levin
Comment 2
2010-11-23 21:02:16 PST
Comment on
attachment 74721
[details]
Patch It feels like this change should also delete the pixel results for the one test that will now no longer use them.
Mihai Parparita
Comment 3
2010-11-23 21:07:09 PST
(In reply to
comment #2
)
> (From update of
attachment 74721
[details]
) > It feels like this change should also delete the pixel results for the one test that will now no longer use them.
We didn't have any pixel results for http/tests/slow-utf8-text.pl, that's how I noticed this discrepancy in the first place (I'm working on updating the Mac baselines for Snow Leopard, so I've been running all tests through the Mac port's DRT with pixel tests enabled, which the bots don't do). Will wait for the EWS to process this patch before landing it, since I made the Windows and GTK changes blindly locally.
WebKit Commit Bot
Comment 4
2010-11-24 11:18:35 PST
The commit-queue encountered the following flaky tests while processing
attachment 74721
[details]
: fast/history/history-subframe-with-name.html compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by
mihaip@chromium.org
and
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2010-11-24 11:46:03 PST
Comment on
attachment 74721
[details]
Patch Clearing flags on attachment: 74721 Committed
r72694
: <
http://trac.webkit.org/changeset/72694
>
WebKit Commit Bot
Comment 6
2010-11-24 11:46:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug