2010-11-24  Mihai Parparita  <mihaip@chromium.org>

Reviewed by David Levin.

        DRT should not generate pixel output for text/plain tests
        https://bugs.webkit.org/show_bug.cgi?id=50002

        Modify Mac, Windows and GTK DRT implementations to disable pixel output
        when encountering a text/plain response (the Chromium one already does
        this, and none of the other ports special-case text/plain output in
        the first place).

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):
        * DumpRenderTree/mac/DumpRenderTree.mm:
        (dump):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (dump):

Canonical link: https://commits.webkit.org/63155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72694 268f45cc-cd09-0410-ab3c-d52691b4dbfc